--- a/jsons/translations/Italian.properties
+++ b/jsons/translations/Italian.properties
@@ -102,6 +102,8 @@ Citadel = Cittadella
 Bank = Banca
 Stock Exchange = Borsa valori
 
+Spiral Minaret = Minareto a spirale
+
 Customs House = Dogana
 Feitoria = Feitoria
 
@@ -152,6 +154,8 @@ Public Transportation = Trasporto pubblico
 
 Rock 'n' Roll = Rock 'n' Roll
 
+Mt. Rushmore = Monte Rushmore
+
 Supermarket = Supermercato
 Mall = Centro commerciale
 
@@ -167,6 +171,88 @@ Hollywood = Hollywood
 
 Laboratory = Laboratorio
 Research Institute = Istituto di ricerca
+
+The Space Elevator = L'Ascensore Spaziale
+
+# Requires translation!
+SS Casing = 
+# Requires translation!
+SS Docking Bay = 
+# Requires translation!
+SS Life Support = 
+# Requires translation!
+SS Thrusters = 
+
+Revolution = Rivoluzione
+
+
+
+# From Difficulties.json
+
+Noble = Nobile
+Monarch = Re
+
+
+
+# From Nations.json
+
+Aztec = Azteca
+
+Expansive and Charismatic = Espansionista e Carismatico
+Spiritual and Philosophical = Spirituale e Filosofico
+Spiritual and Aggressive = Spirituale e Aggressivo
+Expansive and Protective = Espansionista e Protettivo
+Creative and Spiritual = Creativo e Spirituale
+Financial and Philosophical = Finanziario e Filosofico
+Organized and Charismatic = Organizzato e Carismatico
+Expansive and Industrious = Espansionista e Industriale
+Aggressive and Philosophical = Aggressivo e Filosofico
+Financial and Industrious = Finanziario e Industriale
+Spiritual and Philosophical = Spirituale e Filosofico
+Aggressive and Protective = Aggressivo e Protettivo
+Financial and Spiritual = Finanziario e Spirituale
+Aggressive and Imperialistic = Aggressivo e Imperialista
+Imperialistic and Charismatic = Imperialista e Carismatico
+Industrious and Imperialistic = Industriale e Imperialista
+Expansive and Philosophical = Espansionista e Filosofico
+Expansive and Spiritual = Espansionista e Spirituale
+
+Expansive = Espansionista
+Charismatic = Carismatico
+Spiritual = Spirituale
+Philosophical = Filosofico
+Aggressive = Aggressivo
+Protective = Protettivo
+Creative = Creativo
+Financial = Finanziario
+Organized = Organizzato
+Industrious = Industriale
+Imperialista = Imperialista
+
+ 
+# From Policies.json
+
+Government = Governo
+Despotism = Despotismo
+Hereditary Rule = Governo ereditario
+Legal = Legalismo
+Barbarism = Barbarismo
+Bureaucracy = Burocrazia
+Nationhood = Nazionalismo
+Vassalage = Vassallaggio
+Labor = Laburismo
+Caste System = Sistema a caste
+Emancipation = Emancipazione
+Serfdom = Servità
+Slavery = Schiavismo
+Tribalism = Tribalismo
+Economy = Economia
+Decentralization = Decentralizzazione
+Environmentalism = Ambientalismo
+Free Market = Mercato libero
+State Property = Proprietà di Stato
+Pacifism = Pacifismo
+Paganism = Paganesimo
 
 
 # From Techs.json
@@ -189,7 +275,7 @@ Fishing = Pesca
 Hunting = Caccia
 'If you chase two rabbits, you will lose them both.' - Native American saying = 'Se dai la caccia a due conigli, li perderai entrambi.' - Proverbio dei Nativi Americani
  
-Mysticism = Misticism
+Mysticism = Misticismo
 'Nature herself has imprinted on the minds of all the idea of God.' - Cicero = 'La Natura stessa ha impresso nelle menti di tutti l'idea di Dio.' - Cicerone
  
 Archery = Tiro con l'arco
@@ -213,7 +299,7 @@ Priesthood = Sacerdozio
 Bronze Working = Lavorazione del bronzo
 'It is entirely seemly for a young man killed in battle to lie mangled by the bronze spear. In his death all things appear fair.' - Homer = 'Per un giovane è decoroso morire in battaglia trafitto da una lancia di bronzo. Nella morte, tutte le cose sembrano giuste.' - Omero
 
-Polyteism = Politeismo
+Polytheism = Politeismo
 'Not at all similar are the race of the immortal gods and the race of men who walk upon the Earth.' - Homer = 'La razza degli dei immortali e quella degli uomini terreni non sempre si somigliano.' - Omero
 
 Monotheism = Monoteismo
@@ -425,7 +511,10 @@ Lasers = Laser
  
 Fiber Optics = Fibre ottiche
 'There is a single light of science and to brighten it anywhere is to brighten it everywhere.' – Isaac Asimov = 'Accendendo la luce della scienza da qualche parte, lo si fa ovunque.' - Isaac Asimov
- 
+
+Ecology = Ecologia
+We do not inherit the earth from our ancestors, we borrow it from our children' - Native American proverb = Non ereditiamo la terra dai nostri antenati, la prendiamo in prestito per i nostri figli. - Canzone dei Nativi Americani
+
 Advanced Flight = Volo avanzato
 'Oh! I have slipped the surly bonds of Earth, put out my hand and touched the face of God.' – John Gillespie Magee = 'Oh! Sono scivolato via dai rozzi legami della Terra, ho allungato la mano e ho toccato il Volto di Dio.' - John Gillespie Magee
  
@@ -443,9 +532,41 @@ Genetics = Genetica
  
 Stealth = Invisibilità
 'Behind a veil, unseen yet present, I was the forceful soul that moved this mighty body.' – Jean Racine = 'Dietro un velo, invisibile ma presente, ero la vigorosa anima che muoveva questo poderoso corpo.' - Jean Racine
- 
+
+Fusion = Fusione nucleare
+Any sufficiently advanced technology is indistinguishable from magic.\" - Arthur C. Clarke = Ogni tecnologia sufficientemente avanzata è indistinguibile dalla magia. - Arthur C. Clarke
+
 Future Tech = Tecnologia futura
 'The future will be better tomorrow.' – Dan Quayle = 'Domani, il futuro sarà migliore.' - Dan Quayle
+
+ 
+# From TileImprovements.json
+
+Forest Preserve = Riserva forestale
+
+Town = Borgo
+Hamlet = Paesino
+Village = Villaggio
+
+Watermill = Mulino ad acqua
+Whaling Boats = Baleniera
+
+Winery = Cantiera vinicola
+
+ 
+# From TileResources.json
+
+Corn = Granturco
+
+Rice = Riso
+Pig = Maiale
+
+Power = Energia
+
+Hit Movies = Film di successo
+Hit Musicals = Musical di successo
+Hit Singles = Brani di successo
+
  
 # From Units.json
 
@@ -523,6 +644,8 @@ Ballista Elephant = Elefante con balestra
 Knight = Cavaliere
 Camel Archer = Arciere su cammello
 Cataphract = Catafratto
+
+Praetorian = Pretoriano
 
 Cuirassier = Corazziere
 Conquistador = Conquistador
@@ -610,4 +733,50 @@ Fast Worker = Lavoratore veloce
 Work Boat = Chiatta
 
 Spy = Spia
+
+Great Spy = Grande Spia
+
+
+# From UnitPromotions.json
+
+Ambush = Imboscata
+
+City Garrison I = Guarnigione I
+City Garrison II = Guarnigione II
+City Garrison III = Guarnigione III
+
+City Raider I = Attacco cittadino I
+City Raider II = Attacco cittadino II
+City Raider III = Attacco cittadino III
+
+Combat I = Combattimento I
+Combat II = Combattimento II
+Combat III = Combattimento III
+Combat IV = Combattimento IV
+Combat V = Combattimento V
+Combat VI = Combattimento VI
+
+Cover = Copertura
+
+Flanking I = Attacco ai fianchi I
+Flanking II = Attacco ai fianchi II
+
+Formation = Formazione
+
+Guerrilla I = Guerriglia I
+Guerrilla II = Guerriglia II
+Guerrilla III = Guerriglia III
+
+Medic I = Medico I
+
+Navigation I = Navigazione I
+Navigation II = Navigazione II
+
+Pinch = Tenaglia
+
+Shock = Assalto
+
+Woodsman I = Forestali I
+Woodsman II = Forestali II
+
 
